# Projet_mecatronique_I3

./: .editorconfig  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  COMPRENDRE_LE_JEU.md  CONTRIBUTING.md  LICENSE  Note de Projet Détaillée – Quoridor Interactif.md  README.md  main.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: tests.yml
Schéma_PCB/: BOM_mecatronique_2026-03-31.csv  REFERENCE_PCB.md  Sheet_1_2026-03-31.net
docs/: 00_plan_global.md  01_demarrage.md  02_architecture.md  03_moteur_jeu.md  04_ia.md  05_firmware.md  06_protocole_uart.md  07_hardware.md  08_tests.md  README.md  note_de_projet.md
docs/flowcharts/: 02_logique_ia.md  04_plateau.md
docs/notes/: 2026-05-04-p9-reprise-session.md  (+1 more)
electronique/: AUDIT_PCB.md  GUIDE_MODIFICATIONS_EASYEDA.md  Guide_Modifications_PCB_v2.docx  PIN_MAPPING_VERIFIE.md  PLAN_CORRECTION_PCB.md  SCHEMA_CORRIGE.md  SOLUTIONS_CORRECTIONS.md
firmware/: .clangd  INTEGRATION_TESTS_PENDING.md  TESTS_PENDING.md  platformio.ini
flowcharts/: 01_vue_generale.md  02_logique_ia.md  03_logique_jeu.md  04_plateau.md  README.md
hardware/: AUDIT_PCB_V2.md  PCB_PCB_mecatronique_2026-04-28.json  README.md
quoridor_engine/: README.md  __init__.py  ai.py  core.py  game_session.py  uart_client.py
tests/: README.md  README_TESTS.md  conftest.py  test_ai.py  test_core.py  test_game.py  test_game_session.py  test_main_cli.py  test_moves.py  test_uart_client.py  test_walls.py
(+29 files in other folders)
